# lex

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: lexer_benchmarks.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_comments.rs  fuzz_language.rs  fuzz_lexer.rs  fuzz_numbers.rs  fuzz_strings.rs
src/: cache.rs  error.rs  incremental.rs  lexer.rs  lib.rs  main.rs  source.rs  span.rs  streaming.rs  token.rs  unicode.rs  wasm.rs
src/ast/: expr.rs  item.rs  mod.rs  stmt.rs  types.rs
src/language/: builder.rs  default.rs  mod.rs
src/parser/: error.rs  mod.rs
tests/: proptest_lexer.proptest-regressions  proptest_lexer.rs  real_source_files.rs
web/: README.md  index.html  lex.d.ts
