[package]
name = "lex"
version = "0.1.0"
edition = "2021"
description = "A lexer/tokenizer built from scratch in Rust"
license = "Apache-2.0"

[[bin]]
name = "lex"
path = "src/main.rs"

[lib]
name = "lex"
path = "src/lib.rs"

[dependencies]
# No external dependencies for core lexing

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"

[[bench]]
name = "lexer_benchmarks"
harness = false
